new line error cv

--- a/cv.html
+++ b/cv.html
@@ -330,7 +330,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
     </span>
     <br>
 </p>
-<b><em>Student Engineer / EIT</em></b><br>, District Design Office
+<b><em>Student Engineer / EIT</em></b>, District Design Office <br>
 <ul style="margin-left: 2%; line-height: 1.6;">
     <li>Drafting, analysis, and design in Bentley MicroStation, Openroads, SignCAD, ArcGIS suite, and Microsoft Excel. </li>
     <li>Removal of organic contaminants by pre-oxidation and biofiltration in a pilot-scale drinking water treatment plant</li>
