formatting cv references

--- a/cv.html
+++ b/cv.html
@@ -509,12 +509,12 @@ Berg, S., <b>Goedjen, G.</b>, and Arnold, W. “Removal of organic contaminants 
 <hr>
 <br>
 
-William Arnold <br>
+<b><em>William Arnold</em></b> <br>
 Distinguished McKnight University Professor, and Joseph T. and Rose S. Ling Professor <br>
 Department of Civil, Environmental, and Geo Engineering <br>
 University of Minnesota <br>
 Phone: (612) 625-8582 <br>
-Email: <a href = "mailto:Arnol032@umn.edu" style="text-decoration:none">Arnol032@umn.edu</a>
+Email: <a href = "mailto:Arnol032@umn.edu" style="text-decoration:none">Arnol032@umn.edu</a><br>
 Website: <a href="https://williamarnold.org">https://williamarnold.org</a>
 
 <br>
@@ -522,7 +522,7 @@ Website: <a href="https://williamarnold.org">https://williamarnold.org</a>
 <hr>
 <br>
 
-Paul Capel <br>
+<b><em>Paul Capel</em></b><br>
 Adjunct Associate Professor <br>
 Department of Civil, Environmental, and Geo Engineering <br>
 University of Minnesota  <br>
