updated sppp citation

--- a/cv.html
+++ b/cv.html
@@ -385,7 +385,7 @@ Awarded for work pertaining to the degradation and leaching potential of neonico
 
 <b>Goedjen, G.</b>, Berens, M., Capel, P., and Arnold, W. “Watershed-level Factors Influencing the Occurrence of Neonicotinoid and Fipronil Insecticides in Midwest Surface Waters”, <em>In Progress.</em> <br><br>
 <b>Goedjen, G.</b>, Berens, M., Capel, P., and Arnold, W. “Comparative Occurrence of Neonicotinoids and Fiproles in Minnesota Hydrogeologic Systems.”, <em>In Progress.</em> <br><br>
-Berg, S., <b>Goedjen, G.</b>, and Arnold, W. “Removal of organic contaminants by pre-oxidation and biofiltration in a pilot-scale drinking water treatment plant”, <em>In Progress.</em>  <br><br>
+Berg, S., Kuo-Dahab, C.,  <b>Goedjen, G.</b>, and Arnold, W. “Removal of organic contaminants by pre-oxidation and biofiltration in a pilot-scale drinking water treatment plant”, <em>In Progress.</em>  <br><br>
 
 <!----------------------------------------------------------------------------------------------------------------------->
 <!-- CV: Publications --> 
