--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 </div>
 
 <ul id="nav_ul">
-  <li class="parent"><a href="index.html">Welcome</a></li>
-  <li class="parent"><a href="#">Research Interest</a>
+  <li class="topnav"><a href="index.html">Welcome</a></li>
+  <li class="topnav"><a href="#">Research Interest</a>
           <ul class="child">
-          <li class="parent"><a href="currentprojects.html">What are Neonicotinoids and Fiproles</a></li>
-          <li class="parent"><a href="ComingSoon.html">Pesticides in Surface Water</a></li>
-          <li class="parent"><a href="ComingSoon.html">Pesticides in Groundwater</a></li>
-          <li class="parent"><a href="ComingSoon.html">Pesticides in Engineered Treatment Systems</a></li>
-          <li class="parent"><a href="ComingSoon.html">Composting Systems</a></li>
+          <li class="topnav"><a href="currentprojects.html">What are Neonicotinoids and Fiproles</a></li>
+          <li class="topnav"><a href="ComingSoon.html">Pesticides in Surface Water</a></li>
+          <li class="topnav"><a href="ComingSoon.html">Pesticides in Groundwater</a></li>
+          <li class="topnav"><a href="ComingSoon.html">Pesticides in Engineered Treatment Systems</a></li>
+          <li class="topnav"><a href="ComingSoon.html">Composting Systems</a></li>
           </ul>
   </li>
-  <li class="parent"><a href="cv.html">Circum Vitae</a></li>
-  <li class="parent"><a href="presentations.html">Recent Presentations</a></li>
-  <li class="parent"><a href="acknowledgement.html">Acknowledgements</a></li>
-  <li class="parent"><a href="landacknowledgements.html">Land Acknowledgement</a></li>
-  <li class="parent"><a href="https://williamarnold.org">Arnold Lab Website</a></li>
-  <li class="parent"><a href="contact.html">Contact Me</a></li>
+  <li class="topnav"><a href="cv.html">Circum Vitae</a></li>
+  <li class="topnav"><a href="presentations.html">Recent Presentations</a></li>
+  <li class="topnav"><a href="acknowledgement.html">Acknowledgements</a></li>
+  <li class="topnav"><a href="landacknowledgements.html">Land Acknowledgement</a></li>
+  <li class="topnav"><a href="https://williamarnold.org">Arnold Lab Website</a></li>
+  <li class="topnav"><a href="contact.html">Contact Me</a></li>
 </ul>
 
 <br>
