--- a/currentprojects.html
+++ b/currentprojects.html
@@ -1,4 +1,8 @@
 <html lang="en">
+
+<!----------------------------------------------------------------------------------------------------------------------->
+<!-- HTML Header --> 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +11,17 @@
     <link rel="stylesheet" href="normalize.css">
 </head>
 
-
 <body>
 
+<!----------------------------------------------------------------------------------------------------------------------->
+<!-- Title Banner --> 
 
 <div style="background-color:#7a0019;padding:15px;padding:15px;color:#ffcc33;font-family:'Geneva';">
   <h1 align="center">Research Interests</h1>
 </div>
 
+<!----------------------------------------------------------------------------------------------------------------------->
+<!-- Menu: Desktop --> 
 
 <ul id="nav_ul">
   <li class="parent"><a href="index.html">Welcome</a></li>
@@ -37,14 +44,22 @@
 
 <br>
 
+<!----------------------------------------------------------------------------------------------------------------------->
+<!-- Menu: Desktop --> 
+
 <div style="background-color:#df9eab;padding:0pt;height:35px;width:100vw;position:relative;top:-25px;z-index: -999">
 </div>
 
+<div style="margin-left: 30pt;margin-right:15pt"> <!-- Set margins --> 
 
-<div style="margin-left: 30pt;margin-right:15pt">
+<!----------------------------------------------------------------------------------------------------------------------->
+<!-- Menu: Research Interest --> 
 
 <h1><a>Research Interests</a></h1>
 <hr><hr>
+
+<!----------------------------------------------------------------------------------------------------------------------->
+<!-- Menu: Research Interest --> 
 
 <br>
 My research focuses on occurrence and fate of first generation of neonicotinoids (i.e. classical neonicotinoids) and  fipronil insecticides in environs. My main research focuses include:
@@ -60,13 +75,15 @@ My research focuses on occurrence and fate of first generation of neonicotinoids
 
 <br>
 
+<!----------------------------------------------------------------------------------------------------------------------->
+<!-- Background Information-->
+
 <h2>What are Neonicotinoids?</h2>
 <hr><hr>
 <br>
 
-
 <p align="center">
-  <img src="./Figures/Neonics.png" width = "100%"/>
+  <img src="./Figures/Neonics.png" width = "100%"/> <!-- Neonic structures Image -->
 </p><br>
 
 "Neo" meaning "new" and nicotinoids meaning "Nicotine-Like":
@@ -93,7 +110,6 @@ Neonicotinoids are by-far the most popular pesticide used in Minnesota agricultu
 
 Neonicotinoids are a systemic pesticide, meaning that instead of just hanging around on the surface of the plant or in the soil, the insecticides are taken up and metabolized by the plant! Just like nicotine, neonicotinoids bind to the nicotinic acetylcholine receptor in the central nervous system. While this has a limited reaction in larger mammals, this can cause paralysis, seizures, and eventually death in insects! Ideally that would mean that neonicotinoids should be taken up and trapped in the body of the plant and only effect smaller pest insects without effecting larger organisms; Unfortunately that is often not the case. While much of the applied insecticides do remain in the body of the plant, it is not uncommon to find them where they shouldn't be! Our lab has detected them at appreciable concentrations all over, including in many of Minnesota's lakes, rivers, and springs. We even find them in waste water and drinking water plants! To learn more, check out our paper on <a href="https://hdl.handle.net/11299/220617"><it>Neonicotinoids in Minnesota Surface Waters</it></a> and take a look at my latest poster to be presented at the 2022 Gordon Research Conference on Water Chemistry! That not all, Neonicotinoids have been found in <a href = "https://doi.org/10.1021/jf501397m">grocery store produce</a>,
  <a href = "https://doi.org/10.1016/j.jeem.2020.102320">agricultural products</a>, <a href = "https://doi.org/10.1016/j.biocontrol.2009.09.001">non-target insects</a>, <a href = "https://doi.org/10.1016/j.jchromb.2015.03.016">honey</a>, <a href = "https://doi.org/10.1021/jf404100x">tea</a>, <a href = "https://link.springer.com/article/10.1007/s10646-012-0863-x">pollinators</a>, <a href = "https://doi.org/10.1016/j.envpol.2018.04.144">human bodily fluids</a>, <a href = "https://doi.org/10.1016/j.ecoenv.2021.112001">blood</a>, <a href = "https://doi.org/10.1016/j.scitotenv.2021.151407">seminal fluid</a>, and in <a href = "https://doi.org/10.1016/j.scitotenv.2021.151806">pregnant women</a>. Just about everything that comes into contact pesticides directly or indirectly seems to have at least a bit of neonicotinoid in them.
-
 
 <br><br>
 <h2>What is Fipronil?</h2>
@@ -151,7 +167,6 @@ Fipronil has a comparatively lower solubility in water and significantly higher 
 While neonicotinoids are found in a huge variety of foods, they are at <b><em>very</em></b> low concentrations - we're talking ng/L and ng/kg concentrations! While the harmful dosage is generally in the ug/kg range. That being said, not a whole lot is understood about neonicotinoid toxicity towards humans - so keep yourself informed on the latest research and always wash your produce!
 
 The widespread occurrence of neonicotinoids, even at these low concentrations, are not something that should be ignored, however. While these low concentrations of insecticides aren't believed to be harmful to humans, they can wreck havoc on non-target insects and pollinators, including bees. It has been such a prevalent issue that the European Union even <a href="https://ec.europa.eu/food/plants/pesticides/approval-active-substances/renewal-approval/neonicotinoids_en">banned the use of neonicotinoids for agricultural production in 2013</a>. So while we don't have to worry about direct toxicity to humans, we certainly should begin looking  for less harmful alternatives to help protect our pollinator friends!
-
 
 <br><br>
 <hr>
