--- a/test.html
+++ b/test.html
@@ -9,10 +9,10 @@
 
 <body>
 <div class = "row">
-    <div class="ban-12" style="text-align: cnter">
+    <div class="ban-12" style="text-align: center">
         <div class="banner">
-            <h1 align="center">Grant's Personal Research Website</h1>
-            <p align="center"> Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group! </p>
+            <h1 align="center" class="bannerH1">Grant's Personal Research Website</h1>
+            <p align="center" class="bannerText"> Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group! </p>
         </div>
 
         <div class="topnav">
@@ -43,7 +43,7 @@
     <a href="contact.html">Contact Me!</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
-  
+
   <script>
     /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
     function myFunction() {
