--- a/landacknowledgements.html
+++ b/landacknowledgements.html
@@ -18,7 +18,7 @@
 
 
 <div style="background-color:#7a0019;padding:15px;padding:15px;color:#ffcc33;font-family:'Geneva';">
-  <h1 align="center">Native American Land Acknowledgement</h1>
+  <h1 align="center">indigenous Peoples Land Acknowledgement</h1>
 </div>
 
 <ul id="nav_ul">
