--- a/test.html
+++ b/test.html
@@ -11,8 +11,10 @@
 <div class = "row">
     <div class="ban-12" style="text-align: center">
         <div class="banner">
+            <br>
             <h1 align="center" class="bannerH1">Grant's Personal Research Website</h1>
-            <p align="center" class="bannerText"> Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group! </p>
+            <p align="center" class="bannerText"> Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group! </p
+            ><br>
         </div>
 
         <div class="topnav">
