--- a/currentprojects.html
+++ b/currentprojects.html
@@ -12,7 +12,7 @@
     <div class="ban-12" style="text-align: center">
         <div class="banner">
             <br>
-            <h1 align="center" class="bannerH1">Reserach Interests</h1>
+            <h1 align="center" class="bannerH1">Research Interests</h1>
             <br>
         </div>
 
