--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
 <div style="margin-left: 15pt;margin-right:15pt">
 
-<div class="col-12">
-  <div class="column" style="align: center">
+<div class="col-12" style="align-self:center;">
+  <div class="column" style="align-self: center;">
     <img src="./Figures/Goldy.png" alt="UMN Goldy M Logo" style="width:35vw; padding-left: 3%;">
     <img src="./Figures/NCPhoto.png" alt="Grant Goejen" style="width:26.5vw">
     <img src="./Figures/DoubleT.png" alt="Texas Tech Double T" style="width:22vw">
