--- a/landacknowledgements.html
+++ b/landacknowledgements.html
@@ -67,14 +67,13 @@
 <br>
 
 
-
-<div class="row" style="width:1000px;margin:auto">
+<h2 align="center">Dakota Souix and Ojibwe Land Acknowledgement</h2><br>
+<div class="row" style="width:100vw;margin:auto">
   <div class="column">
-    <div align="center"><img width="66%" align="center" src="https://www.dot.state.mn.us/tribaltraining/images/mn_reservations_map.jpg" alt="Minnisota Native Tribal Lands">
+    <div align="center"><img width="95%" align="center" src="https://www.dot.state.mn.us/tribaltraining/images/mn_reservations_map.jpg" alt="Minnisota Native Tribal Lands">
     </div>
   </div>
-  <div class="column">
-    <h2 align="center">Dakota Souix and Ojibwe Land Acknowledgement</h2>
+  <div class="column" style="padding: 5%">
     <p>We acknowledge that much of our research is conducted on tribal land within the traditional homelands of the Dakota Sioux and Ojibwe people. It is important to acknowledge the peoples on whose land we live, learn, and work as we seek to improve and strengthen our relations with our tribal nations. </p> 
     <p> We also acknowledge that words are not enough. We must ensure that the Unviersity of Minnesota provides support, resources, and programs that increase access to all aspects of higher education for our American Indian students, staff, faculty, and community members.
     </p>
