--- a/presentations.html
+++ b/presentations.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <a href="cv.html">Circum Vitae</a>
-    <a href="presentations.html">Recent Presentation</a>
+    <a href="presentations.html">Recent Presentations</a>
     <a href="acknowledgement.html">Acknowledgements</a>
     <a href="landacknowledgements.html">Land Acknowledgement</a>
     <a href="https://williamarnold.org">Arnold Lab Website</a>
