--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-    <a class="active" href="index.html">Home</a>
+    <a class="active" href="home.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
