--- a/landacknowledgements.html
+++ b/landacknowledgements.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-    <a class="active" href="index.html">Home</a>
+    <a class="active" href="home.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
@@ -37,7 +37,7 @@
         </div>
     </div>
     <a href="cv.html">Circum Vitae</a>
-    <a href="presentations.html">Recent Presentation</a>
+    <a href="presentations.html">Recent Presentations</a>
     <a href="acknowledgement.html">Acknowledgements</a>
     <a href="landacknowledgements.html">Land Acknowledgement</a>
     <a href="https://williamarnold.org">Arnold Lab Website</a>
