new banner and cleanup

--- a/acknowledgement.html
+++ b/acknowledgement.html
@@ -4,22 +4,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goedjen Research Website</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="working.css">
 </head>
 
 <body>
+
 <div class = "row">
-    <div class="ban-12" style="text-align: center">
-        <div class="banner">
-            <br>
-            <h1 align="center" class="bannerH1">Arnold Lab Acknowledgements</h1>
-            <br>
+  <div class="ban-12" style="text-align: center">
+    <div class="banner">
+    <br>
+      <div class = "bannerH2">
+        <buttonBanner onclick="location.href='home.html'">
+          Goedjen Research Website
+        <div class="bannerH1">
+          A Special Thanks!
         </div>
-
-        <div class="topnav">
-
-          </div>
+        </buttonBanner> 
+      </div>
+    <br>
     </div>
+  </div>
 </div>
 
 <div class="topnav" id="myTopnav">
