--- a/cv.html
+++ b/cv.html
@@ -4,21 +4,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goedjen Research Website</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="working.css">
 </head>
 
 <body>
+
 <div class = "row">
     <div class="ban-12" style="text-align: center">
         <div class="banner">
-            <br>
-            <h1 align="center" class="bannerH1">Circum Vitae</h1>
-            <br>
+        <br>
+        <div class = "bannerH2">
+            <buttonBanner onclick="location.href='home.html'">
+            Goedjen Research Website
+            <div class="bannerH1">
+            Circum Vitae
+            </div>
+            </buttonBanner> 
         </div>
-
-        <div class="topnav">
-
-          </div>
+        <br>
+        </div>
     </div>
 </div>
 
@@ -76,7 +80,7 @@
 <br>
 
 <!----------------------------------------------------------------------------------------------------------------------->
-<!-- CV: Educaiton --> 
+<!-- CV: Education --> 
 
 <p style="text-align:left;font-weight:bold">
     Ph.D. Civil Engineering
@@ -96,7 +100,7 @@
 <br>
 
 <p style="text-align:left;font-weight:bold">
-    PM.Enve Environmental Engineering
+    M.Enve. Environmental Engineering
     <span style="float:right;">
         May 2020
     </span>
@@ -106,7 +110,7 @@ Texas Tech University <br>
 <br><br>
 
 <p style="text-align:left;font-weight:bold">
-    B. S. Environmental Engineering
+    B.S. Environmental Engineering
     <span style="float:right;">
         May 2020
     </span>
