--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goedjen Research Website</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="working.css">
 </head>
 
 <body>
-<div class = "row">
+
+  <div class = "row">
     <div class="ban-12" style="text-align: center">
         <div class="banner">
             <br>
-            <h1 align="center" class="bannerH1">Grant's Personal Research Website</h1>
-            <p align="center" class="bannerText">Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group!</p>
+            <h1 align="center" class="bannerH1">
+              <buttonBanner onclick="location.href='home.html'"> Grant Goedjens's Personal Research Website</buttonBanner>
+            </h1>
+            <p align="center" class="bannerText">
+              Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group!
+            </p>
             <br>
         </div>
-
-        <div class="topnav">
-
-          </div>
     </div>
 </div>
 
