--- a/presentations.html
+++ b/presentations.html
@@ -4,23 +4,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goedjen Research Website</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="working.css">
 </head>
 
 <body>
-<div class = "row">
+
+  <div class = "row">
     <div class="ban-12" style="text-align: center">
-        <div class="banner">
-            <br>
-            <h1 align="center" class="bannerH1">Recent Publications and Presentations</h1>
-            <br>
-        </div>
-
-        <div class="topnav">
-
+      <div class="banner">
+      <br>
+        <div class = "bannerH2">
+          <buttonBanner onclick="location.href='home.html'">
+            Goedjen Research Website
+          <div class="bannerH1">
+            Recent Presentations and Publications
           </div>
+          </buttonBanner> 
+        </div>
+      <br>
+      </div>
     </div>
-</div>
+  </div>
 
 <div class="topnav" id="myTopnav">
     <a class="active" href="home.html">Home</a>
