--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goedjen Research Website</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="working.css">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     <div class="ban-12" style="text-align: center">
         <div class="banner">
             <br>
-            <h1 align="center" class="bannerH1">Grant's Personal Research Website</h1>
+            <h1 align="center" class="bannerH1"><buttonCV type="button" onclick="location.href='home.html'">Grant's Personal Research Website</buttonCV></h1>
             <p align="center" class="bannerText"> Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group! </p
             ><br>
         </div>
