home banner button

--- a/home.html
+++ b/home.html
@@ -13,11 +13,12 @@
         <div class="banner">
             <br>
             <h1 align="center" class="bannerH1">
-              <buttonBanner onclick="location.href='home.html'"> Grant Goedjens's Personal Research Website</buttonBanner>
+              <buttonBanner onclick="location.href='home.html'"> Grant Goedjens's Personal Research Website
+                <p align="center" class="bannerText">
+                  Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group!
+                </p>
+              </buttonBanner>
             </h1>
-            <p align="center" class="bannerText">
-              Welcome to my personal research page! Here you can find my most recent work, presentations, awards, and publications from the Arnold Lab Group!
-            </p>
             <br>
         </div>
     </div>
