fixed highlight issue for active research area page

--- a/ComingSoon.html
+++ b/ComingSoon.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-    <a class="active" href="home.html">Home</a>
+    <a href="home.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
@@ -94,7 +94,10 @@ See the latest work going on our <a href = "https://williamarnold.org">lab websi
 
 <br><br>
 <hr>
-Last Updated: 2022.08.23
+<br>
+
+Last Updated: 2022.08.24
+
 <br><br>
 
 </div>
