--- a/acknowledgement.html
+++ b/acknowledgement.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-    <a class="active" href="home.html">Home</a>
+    <a href="home.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
@@ -42,7 +42,7 @@
     </div>
     <a href="cv.html">Circum Vitae</a>
     <a href="presentations.html">Recent Presentations</a>
-    <a href="acknowledgement.html">Acknowledgements</a>
+    <a class="active" href="acknowledgement.html">Acknowledgements</a>
     <a href="landacknowledgements.html">Land Acknowledgement</a>
     <a href="https://williamarnold.org">Arnold Lab Website</a>
     <a href="contact.html">Contact Me!</a>
@@ -60,6 +60,7 @@
       }
     }
     </script>
+    
 
 <br>
 
@@ -69,7 +70,9 @@
 
 <br>
 
-<div class="col-10">
+<div class="col-12">
+
+
   <h2 align="center">Undergraduate Assistants</h2><br>
   <div class="row" style="width:90vw;">
     <div style="width: 50vw; padding: 2vw;">
@@ -98,11 +101,14 @@
     
     </div>
 </div>
-</div>
+
 <br>
 <hr>
 <br>
-Last Updated: 2022.08.23
+
+Last Updated: 2022.08.24
+
+<br><br>
 
 </div>
 </body>
