--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-    <a class="active" href="home.html">Home</a>
+    <a href="home.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
@@ -45,7 +45,7 @@
     <a href="acknowledgement.html">Acknowledgements</a>
     <a href="landacknowledgements.html">Land Acknowledgement</a>
     <a href="https://williamarnold.org">Arnold Lab Website</a>
-    <a href="contact.html">Contact Me!</a>
+    <a class="active" href="contact.html">Contact Me!</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
 
@@ -76,8 +76,10 @@
 
 <br><br>
 <hr>
-Last Updated: 2022.08.23
-<br><br>
+<br>
+
+Last Updated: 2022.08.24
+
 <br><br>
 
 </div>
