--- a/currentprojects.html
+++ b/currentprojects.html
@@ -27,13 +27,13 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-    <a class="active" href="home.html">Home</a>
+    <a href="home.html">Home</a>
     <div class="dropdown">
-        <button class="dropbtn" href="currentprojects.html">Research Interests 
+        <button class="dropbtnActive" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="currentprojects.html">What are Neonicotinoids and Fiproles?</a>
+          <a class = "dropdownactive" href="currentprojects.html">What are Neonicotinoids and Fiproles?</a>
           <a href="ComingSoon.html">Pesticides in Surface Water</a>
           <a href="ComingSoon.html">Pesticides in Groundwater</a>
           <a href="ComingSoon.html">Pesticides in Engineered Treatment Systems</a>
@@ -183,7 +183,10 @@ The widespread occurrence of neonicotinoids, even at these low concentrations, a
 
 <br><br>
 <hr>
+<br>
+
 Last Updated: 2022.08.23
+
 <br><br>
 
 </div>
