--- a/cv.html
+++ b/cv.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-    <a class="active" href="home.html">Home</a>
+    <a href="home.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
@@ -40,7 +40,7 @@
           <a href="ComingSoon.html">Composting Systems</a>
         </div>
     </div>
-    <a href="cv.html">Circum Vitae</a>
+    <a class="active" href="cv.html">Circum Vitae</a>
     <a href="presentations.html">Recent Presentations</a>
     <a href="acknowledgement.html">Acknowledgements</a>
     <a href="landacknowledgements.html">Land Acknowledgement</a>
@@ -550,7 +550,11 @@ Email: <a href = "mailto:Capel001@umn.edu" style="text-decoration:none">Capel001
 <br>
 
 <hr>
-Last Updated: 2022.08.23
+<br>
+
+Last Updated: 2022.08.24
+
+<br><br>
 </div>
 </div>
 </body>
