--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="topnav" id="myTopnav">
-    <a class="active" href="home.html">Home</a>
+    <a href="home.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
