--- a/landacknowledgements.html
+++ b/landacknowledgements.html
@@ -27,7 +27,7 @@
   </div>
 
 <div class="topnav" id="myTopnav">
-    <a class="active" href="home.html">Home</a>
+    <a href="home.html">Home</a>
     <div class="dropdown">
         <button class="dropbtn" href="currentprojects.html">Research Interests 
           <i class="fa fa-caret-down"></i>
@@ -43,7 +43,7 @@
     <a href="cv.html">Circum Vitae</a>
     <a href="presentations.html">Recent Presentations</a>
     <a href="acknowledgement.html">Acknowledgements</a>
-    <a href="landacknowledgements.html">Land Acknowledgement</a>
+    <a class="active" href="landacknowledgements.html">Land Acknowledgement</a>
     <a href="https://williamarnold.org">Arnold Lab Website</a>
     <a href="contact.html">Contact Me!</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
@@ -86,7 +86,11 @@
 
 <br><br>
 <hr>
-  Last Updated: 2022.08.23
+<br>
+
+Last Updated: 2022.08.24
+
+<br><br>
 </div>
 </body>
 </html>
