--- a/presentations.html
+++ b/presentations.html
@@ -26,11 +26,12 @@
     </div>
   </div>
 
+
+
 <div class="topnav" id="myTopnav">
-    <a class="active" href="home.html">Home</a>
+    <a href="home.html">Home</a>
     <div class="dropdown">
-        <button class="dropbtn" href="currentprojects.html">Research Interests 
-          <i class="fa fa-caret-down"></i>
+        <button class="dropbtn">Research Interests 
         </button>
         <div class="dropdown-content">
           <a href="currentprojects.html">What are Neonicotinoids and Fiproles?</a>
@@ -41,7 +42,7 @@
         </div>
     </div>
     <a href="cv.html">Circum Vitae</a>
-    <a href="presentations.html">Recent Presentations</a>
+    <a class="active" href="presentations.html">Recent Presentations</a>
     <a href="acknowledgement.html">Acknowledgements</a>
     <a href="landacknowledgements.html">Land Acknowledgement</a>
     <a href="https://williamarnold.org">Arnold Lab Website</a>
@@ -130,7 +131,11 @@ Todey, S.A., Fallon, A.M., Arnold, W.A. <a href = "https://doi.org/10.1002/etc.4
 
 
 <hr>
-Last Updated: 2022.08.23
+<br>
+
+Last Updated: 2022.08.24
+
+<br><br>
 </div>
 
 </div>
