fixed width issue on ack

--- a/acknowledgement.html
+++ b/acknowledgement.html
@@ -70,8 +70,7 @@
 
 <br>
 
-<div class="col-12">
-
+<div>
 
   <h2 align="center">Undergraduate Assistants</h2><br>
   <div class="row" style="width:90vw;">
@@ -84,7 +83,8 @@
         </p>
       </div>
     </div>
-
+    
+<hr>
     <br>
     <h2 align="center">The Arnold Reserach Group</h2>
     <div class="row" style="width:90vw;">
